tests/machine/x/pascal/outer_join.error
line: 93
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/outer_join.pas
outer_join.pas(61,11) Error: Identifier not found "c"
outer_join.pas(63,46) Error: Identifier not found "c"
outer_join.pas(65,40) Error: Incompatible type for arg no. 2: Got "TFPGMap<System.ShortString,System.LongInt>", expected "Variant"
outer_join.pas(66,42) Error: Identifier not found "c"
outer_join.pas(93) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

